<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Header-->
    <RelativeLayout
        android:id="@+id/header_search_list"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#173E84"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/map_back"
                android:layout_width="25dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:src="@drawable/close" />

            <com.falconnect.dealermanagementsystem.FontAdapter.CustomTextView
                android:id="@+id/title_saved_cars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Pick Address"
                android:textColor="#FFF"
                android:textSize="16dp"
                app:font="sanz.ttf" />

            <ImageView
                android:id="@+id/map_tick"
                android:layout_width="25dp"
                android:layout_height="55dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:onClick="onClick"
                android:src="@drawable/tick" />


        </RelativeLayout>

    </RelativeLayout>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinatorLayout_add_pickup_drop_location"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_search_list"
        android:background="@color/white"
        tools:context="com.falconnect.dealermanagementsystem.LocationSelection">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frameLayout_add_pickup_drop_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/cardview_light_background"
                android:orientation="horizontal"
                android:visibility="gone">


                <TextView
                    android:id="@+id/text_add_pickup_drop_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_pickup_drop_location"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/select_your_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:background="@color/red"
                    android:gravity="center"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/frameLayout_add_pickup_drop_location"
                android:background="@android:color/white"
                android:orientation="vertical">

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context="in.wowtruck.supplierapp.MapsActivity" />

                <LinearLayout
                    android:id="@+id/locationMarker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/save_BTN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/rounded_corner_map"
                        android:drawableEnd="@drawable/mapview_new_icon"
                        android:drawableRight="@drawable/mapview_new_icon"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/add_pickup_drop_location"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageMarker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/title_section2"
                        android:src="@drawable/driverlocation_icon" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_bg_blue"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <EditText
                            android:id="@+id/address_ET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:cursorVisible="false"
                            android:ellipsize="end"
                            android:ems="10"
                            android:focusable="false"
                            android:focusableInTouchMode="true"
                            android:hint="@string/enter_address"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@drawable/cursor_color_blue" />

                    </android.support.design.widget.TextInputLayout>

                    <!-- <android.support.design.widget.TextInputLayout
                         android:id="@+id/input_layout_door_no"
                         android:layout_height="wrap_content"
                         android:layout_width="match_parent">


                         <EditText
                             android:id="@+id/door_no_ET"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ems="10"
                             android:focusableInTouchMode="true"
                             android:hint="@string/door_no"
                             android:inputType="textPostalAddress"
                             android:textCursorDrawable="@drawable/cursor_color_blue"/>

                     </android.support.design.widget.TextInputLayout>-->

                    <!--<TextView-->
                    <!--android:id="@+id/mLocationAddress"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:ellipsize="end"-->
                    <!--android:padding="10dp"-->
                    <!--android:singleLine="true"-->
                    <!--android:textColor="@color/black"-->
                    <!--android:textStyle="bold"-->
                    <!--android:text="Click to change location"-->
                    <!--android:textSize="20.0dp" />-->

                    <!--android:drawableLeft="@drawable/map_start_pin"-->
                    <!--android:drawablePadding="14.0dip"-->

                    <!--<TextView-->
                    <!--android:id="@+id/mLocationAddress"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:padding="10dp"-->
                    <!--android:ellipsize="end"-->
                    <!--android:drawableLeft="@drawable/map_start_pin"-->
                    <!--android:enabled="false"-->
                    <!--android:textColor="@color/black"-->
                    <!--android:hint="Address"-->
                    <!--android:singleLine="true" />-->
                </LinearLayout>

                <ImageView
                    android:id="@+id/current_location_IV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="20dp"
                    android:contentDescription="@string/title_section1"
                    android:src="@drawable/current_location"
                    android:visibility="visible" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
